src/objects/Team_Member__c.object
<CustomObject>
    <description>Team member object connects either internal staff or contractors to a project assignment.  If you further customize the application, you can prevent &quot;stray time reporting&quot; using apex coding so that team members cannot report time outside of the assigned date range.  This becomes important if your organization reports heavily on project costing or SOP-98 capital/expense.  in addition, Force.com Visualforce or Adobe Flex code can be leveraged to help with the matching of resources to projects/work requests.  Please contact professional services for more information on consulting rates or the Salesforce.com Developer network (www.salesforce.com/developer).</description>
    <fields>
        <fullName>Approximate_Hours_Week__c</fullName>
        <formula>Estimated_Hours__c  /  Duration_weeks__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Estimated Hours / Number of Weeks</inlineHelpText>
        <label>Approximate Hours/Week</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assignment_Description__c</fullName>
        <inlineHelpText>Please include any notes on the description of the role requested.  Does this role call for travel?  What is the priority?  Who will this team member report to?  What is the frequency of engagement summary reports?</inlineHelpText>
        <label>Assignment Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contractor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is a lookup to the contact record to track vendors working on projects.</inlineHelpText>
        <label>Contractor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Team Members</relationshipLabel>
        <relationshipName>R00N80000002lXWQEA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Duration_weeks__c</fullName>
        <formula>( End_Date__c  -  Start_Date__c  )  / 7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Duration (weeks) = (End Date - Start Date) / 7 days per week</inlineHelpText>
        <label>Duration (weeks)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Hours__c</fullName>
        <inlineHelpText>Please estimate the hours required for this assignment.</inlineHelpText>
        <label>Estimated Hours</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planed_Deliverables__c</fullName>
        <label>Planned Deliverables</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>PPM_Project__c</referenceTo>
        <relationshipLabel>Team Members</relationshipLabel>
        <relationshipName>R00N80000002lXWNEA2</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Requested_Allocation__c</fullName>
        <inlineHelpText>What is the approximate percent of time required?  Assume 40hrs/week.</inlineHelpText>
        <label>Requested Allocation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Business Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual Contributor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reserved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is a lookup to the user and used to assign internal staff to a project team member.</inlineHelpText>
        <label>Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N80000002lXWPEA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Team Member</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0}</displayFormat>
        <label>Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>